# infrastructure-agent

./: .gitignore  .gitmodules  AGENTS.md  README.md  build-helloworld.sh  build-langflow.sh  build.sh  docker-compose.yml
.github/workflows/: build-ollama.yml  build-opensearch.yml
Dockerfiles/: Dockerfile.langflow  Dockerfile.mcp-auth-proxy  Dockerfile.ollama  Dockerfile.opensearch  init-ollama.sh  init-opensearch.sh  run-ollama.sh
agents/: build.sh  requirements.txt
agents/helloworld/: .dockerignore  Dockerfile  README.md  __main__.py  auth_middleware.py  pyproject.toml  test-client.py
agents/terraform/: __main__.py  test-client.py  (+1 more)
agents/test-client/: .dockerignore  Dockerfile  README.md  __main__.py  pyproject.toml  test-client-ui.py  test-client.py
agents/test-client/templates/: index.html
agents/test-client/vault-agent/: actor_token.tmpl  client_secrets.json.tmpl  config.hcl  oidc_provider.json.tmpl
helm/: langflow.sh  langflow.yaml  opensearch.sh  opensearch.yaml  vault.sh  vault.yaml
kubernetes/: a2a-inspector.yaml  auto-mode.yaml  helloworld-agent.yaml  ingress.yaml  ollama.yaml  opensearch-serviceaccount.yaml  terraform-mcp-server.yaml  test-client.yaml
langflow/: EXAMPLE_AGENT.md  WRITER_AGENT.md  agent.json  infrastructure_agent.json  infrastructure_rag.json
scripts/: check-run-status.sh  ollama-init.sh  vault-init.sh
terraform/: .terraform.lock.hcl  ecr.tf  hcp.tf  irsa.tf  kubernetes.tf  main.tf  opensearch.tf  outputs.tf  terraform.auto.tfvars  tls.tf  variables.tf  vault.tf  versions.tf
vault/: client_secrets.json.ctmpl  config.hcl
(+87 files in other folders)
